--- a/src/main/resources/static/front.html
+++ b/src/main/resources/static/front.html
@@ -16,13 +16,13 @@
             <a href="/list"  id="allItems"> <i class="icon-basket"></i></a>
             <ol>
                 <li>
-                    <a href="/list?kategoria=spożywcze" id="foodItems"><i class="icon-food"></i></a>
+                    <a href="/list?category=GROCERY" id="foodItems"><i class="icon-food"></i></a>
                 </li>
                 <li>
-                    <a href="/list?kategoria=domowe" id="householdItems"><i class="icon-home-1"></i></a>
+                    <a href="/list?category=HOUSEHOLD" id="householdItems"><i class="icon-home-1"></i></a>
                 </li>
                 <li>
-                    <a href="/list?kategoria=inne" id="otherItems"><i class="icon-help"></i></a>
+                    <a href="/list?category=OTHER" id="otherItems"><i class="icon-help"></i></a>
                 </li>
             </ol>
         </li>
